--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  	</script>
 </head>
 <body onload="onBodyLoad()">
-	<h1>Hola Mundo v2</h1>
+	<h1>Hola Mundo v.2</h1>
 	<p>Este es un ejemplo de app en PhoneGap hecha por Luis Rocha.</p>
 </body>
 </html>
